# vue_wasm_test

./: memo.txt  package.json
docs/: index.html
docs/assets/: index-BlIskyEQ.js  index-DKYypwv8.js  wasm_bg-B-0PWNdQ.wasm  wasm_bg-BqGMECDH.wasm
src/components/: HelloWorld.vue
wasm/: Cargo.toml
wasm/src/: lib.rs
