[package]
  name = "wasm"
  version = "0.1.0"
  edition = "2021"

[lib]
  path = "src/lib.rs"
  crate-type = ["cdylib"]

[dependencies]
  js-sys = "0.3.55"
  wasm-bindgen = "0.2.78"
  wasm-bindgen-futures = "0.4.5"

[dependencies.web-sys]
  version = "0.3.55"
  features = [
    'console',
    'Window',
    'Document',
    'Navigator',
    'Element',
    'HtmlVideoElement',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'MediaDevices',
    'MediaStream',
    'MediaStreamConstraints',
  ]
